Fixed: tabs don't wrap in "mini-tabbar"

--- a/chrome/WhiteSur/customs/mini-tabbar.css
+++ b/chrome/WhiteSur/customs/mini-tabbar.css
@@ -25,11 +25,6 @@
 
 scrollbox[orient="horizontal"] > slot {
 	justify-content: var(--tab-centering, initial);
-}
-
-.scrollbox-clip scrollbox:not(:has(scrollbar)) {
-	display: var(--scrollbox-display, flex, -moz-box) !important;
-	justify-content: var(--scrollbox-justify-content) !important;
 	flex-wrap: wrap !important;
 }
 
